# ecom-scrapers

./: .dockerignore  .env.example  .gitignore  AUTH_COMPLETE.md  CHARTS_COMPLETE.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  EMAIL_COMPLETE.md  EMAIL_SETUP.md  EXTENSION_COMPLETE.md  FRONTEND_COMPLETE.md  MIGRATION_COMPLETE.md  MIGRATION_DETAILS.md  QUICKSTART.md  QUICKSTART_SUPABASE.md  README.md  SUPABASE_MIGRATION_STATUS.md  SUPABASE_SETUP.md  TESTING.md  TESTING_COMPLETE.md  TESTING_QUICKSTART.md  docker-compose.yml  fly.toml  render.yaml  start.sh  test.sh  test_api.sh  test_email.sh  test_extension.sh  test_quick.sh
browser-extension/: INSTALL.md  QUICK_REFERENCE.md  README.md  background.js  content.css  content.js  manifest.json  popup.css  popup.html  popup.js
browser-extension/icons/: GENERATE_ICONS.md  create_icons.html
frontend/: README.md  USAGE.md  app.js  index.html  style.css
migrations/: 001_initial_schema.sql
src/: api.rs  auth.rs  db.rs  email.rs  lib.rs  main.rs  models.rs  scraper_trait.rs  worker.rs
src/scrapers/: ajio.rs  flipkart.rs  mod.rs  myntra.rs  tata_cliq.rs
tests/: api_tests.rs
