[package]
name = "clothing_price_tracker"
version = "0.1.0"
edition = "2024"

[dependencies]# Web Framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Database (Supabase/PostgreSQL)
postgrest = "1.6"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# HTTP Client & Scraping
reqwest = { version = "0.11", features = ["json", "cookies"] }
scraper = "0.19"
regex = "1.10"
select = "0.6"

# Headless Browser (optional for SPA sites)
thirtyfour = "0.32"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Email
lettre = { version = "0.11", features = ["tokio1", "tokio1-native-tls", "smtp-transport", "builder", "hostname"] }

# Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"
axum-extra = { version = "0.9", features = ["typed-header"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"

[dev-dependencies]
# HTTP mocking for tests
mockito = "1.2"
wiremock = "0.6"

# Test utilities
tokio-test = "0.4"
serial_test = "3.0"
assert_matches = "1.5"
tower = { version = "0.4", features = ["util"] }

# Test database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }
async-trait = "0.1"
futures = "0.3"